--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,3 +23,10 @@ $max-content-width: {{ site.max_width }};
   "tabler-icons/tabler-icons-filled.scss",
   "tabler-icons/tabler-icons-outline.scss"
 ;
+
+.post {
+  p, li {
+    line-height: 1.8 !important; /* 数值越大，行距越宽 */
+    margin-bottom: 1.25rem;     /* 顺便调整段落之间的距离，保持视觉平衡 */
+  }
+}
